--- a/templates/base.html
+++ b/templates/base.html
@@ -32,6 +32,12 @@
         <li class="nav-item">
           <a class="nav-link" href="/add/">Add a Customer</a>
         </li>
+        <li class="nav-item">
+          <form action="/">
+            <input id="searchName" type="text" name="searchName" placeholder="Search for customer">
+            <button class="btn">Search</button>
+          </form>
+        </li>
       </ul>
     </div>
   </nav>
