--- a/templates/base.html
+++ b/templates/base.html
@@ -33,6 +33,9 @@
           <a class="nav-link" href="/add/">Add a Customer</a>
         </li>
         <li class="nav-item">
+          <a class='nav-link' href="/best-customers">Best Customers</a>
+        </li>
+        <li class="nav-item">
           <form action="/">
             <input id="searchName" type="text" name="searchName" placeholder="Search for customer">
             <button class="btn">Search</button>
